fixed overlapping <code> segments

--- a/website/styles/main.scss
+++ b/website/styles/main.scss
@@ -134,8 +134,8 @@ pre, p code {
 }
 
 p code {
-  padding: 3px 5px;
-  margin: -3px 0;
+  padding: 1px 5px;
+  margin: -1px 0;
   line-height: 1.5;
 }
 
